--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=X-UA-Compatible content="IE=edge">
-<meta name=keywords content="tw-jekyll {{ site.keywords }}">
+<meta name=keywords content="LS-Tripal-Tutorials {{ site.keywords }}">
 <meta name="ROBOTS" CONTENT="INDEX, FOLLOW">
 
 <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicons/favicon.ico" >
