Change the purple.

--- a/docs/_includes/permalinks.html
+++ b/docs/_includes/permalinks.html
@@ -3,7 +3,7 @@
 var headers = ["h1", "h2", "h3", "h4"]
 
 // Lighter to darker as links get smaller (harder to see)
-var colors = ["#cdb8ef", "#bb98f5", "#935feb", "#7c3aed"]
+var colors = ["#8b45ba", "#6f3795", "#542970", "#381c4a"]
 
 $.each(headers, function(i, header){
     var color = colors[i];
