--- a/docs/_includes/toc.html
+++ b/docs/_includes/toc.html
@@ -29,13 +29,13 @@ function slugify(string) {
 
         // If we don't have an id, derive one from title
         if (!div_id) {
-            div_id = slugify(div_text);        
+            div_id = slugify(div_text);
             section.attr("id", div_id)
         }
 
         // This is the part id
         var parent = $("#" + div_id)
-        var content = '<li id="link_' + div_id + '"><a href="#' + div_id + '" title="' + div_text.split('¶')[0] +'" class="relative flex hover:text-violet-600 transition-colors py-1 border-l-[3px] pl-4 -ml-0.5 border-transparent hover:border-violet-500">' + div_text.split('¶')[0] +'</a></li>';
+        var content = '<li id="link_' + div_id + '"><a href="#' + div_id + '" title="' + div_text.split('¶')[0] +'" class="relative flex hover-text-violet transition-colors py-1 border-l-[3px] pl-4 -ml-0.5 border-transparent hover-border-violet">' + div_text.split('¶')[0] +'</a></li>';
         $(toc).append(content);
 
         // Add section code to subnavigation
@@ -47,11 +47,11 @@ function slugify(string) {
                 var contender_text = $(contender).text();
 
                 if (!contender_id) {
-                    contender_id = slugify(contender_text);        
+                    contender_id = slugify(contender_text);
                     $(contender).attr("id", contender_id)
                 }
 
-               var content = '<li><a href="#' + contender_id + '" title="' + contender_text.split('¶')[0] +'" class="relative flex hover:text-violet-600 transition-colors py-1 border-l-[3px] pl-4 -ml-0.5 border-transparent hover:border-violet-500">' + contender_text.split('¶')[0] +'</a></li>';
+               var content = '<li><a href="#' + contender_id + '" title="' + contender_text.split('¶')[0] +'" class="relative flex hover-text-violet transition-colors py-1 border-l-[3px] pl-4 -ml-0.5 border-transparent hover-border-violet">' + contender_text.split('¶')[0] +'</a></li>';
                children.append(content);
             }
          })
