Add in my personal logo + format header.

--- a/docs/_includes/logo-menu.html
+++ b/docs/_includes/logo-menu.html
@@ -1,6 +1,9 @@
-            <nav aria-label="Logo menu" class="flex md:w-60 relative z-50">
+            <div id="site-title" aria-label="Logo menu" class="flex md:w-60 relative z-50">
                <a href="{{ site.baseurl }}/">
-                  <p style="font-size:25px; font-family: Mackinac,ui-serif,Georgia,Cambria,Times New Roman,Times,serif; font-weight: 700;">{{ site.title }}</p>
+                 <img id="site-logo" src="{{ site.baseurl }}/assets/img/LaceySandersonTripalLogo.png" />
+                 <span class="title">
+                   <div class="top-title">LaceySanderson</div>
+                   <div class="bottom-title">Tripal Tutorials</div>
+                 </span>
                </a>
-            </nav>
-
+            </div>
