--- a/docs/_includes/social-menu.html
+++ b/docs/_includes/social-menu.html
@@ -1,4 +1,4 @@
-            <nav aria-label="Social menu" class="hidden xl:flex w-60 h-full">
+            <nav aria-label="Social menu" class="hidden xl:flex w-60 h-full" style="height: 50px;">
                <div class="flex space-x-3 items-center w-full z-10 bg-white text-violet">
                   {% if site.discord %}<a href="https://community.fly.io/" class="text-violet transition-colors">
                      <span class=sr-only> Community </span>
