--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -26,6 +26,22 @@ a.text-light-violet.active {
   color: #8d46b9;
 }
 
+#site-title a {
+  display: inline-flex;
+}
+#site-title img#site-logo {
+  height: 52px;
+  width: 38px;
+}
+#site-title .title {
+  margin-left: 10px;
+  margin-top: 4px;
+  font-size:24px;
+  font-family: Mackinac,ui-serif,Georgia,Cambria,Times New Roman,Times,serif;
+  font-weight: 700;
+  line-height: 24px;
+}
+
 .btn-blue {
   background-color: #405cf5;
 }
