--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -3,8 +3,17 @@
 }
 
 .docs article .callout {
-    margin-left: 0rem !important;
-    margin-right: -2rem;
+  margin-left: 0rem !important;
+  margin-right: 0rem !important;
+}
+.docs article .callout.info {
+  background-color: #dfedd5;
+  border-color: #cde6bc;
+}
+
+article img {
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  width: 80%;
 }
 
 .text-violet {
@@ -76,7 +85,7 @@ thead {
 thead tr th:nth-child(1) {
   font-weight: bold;
   text-align: right;
-  width: 180px;
+  width: 40%;
   padding: 0 15px;
 }
 thead tr th:nth-child(2) {
